gccida/g1/print_exp
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:695:16: error: use of undeclared identifier 'off_6376D2'
sprintf( tmp, &off_6376D2[1], *( _DWORD *)&x[1]); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:710:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:723:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:732:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:733:6: error: use of undeclared identifier 'off_6BAD95'
v7 = off_6BAD95; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:737:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:756:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:769:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:776:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:783:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:789:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:794:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:800:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:807:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:814:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:827:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:834:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:841:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/sched-vis.c:848:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)x[1]; 
              ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_exp/src/obj/sched-vis.o] Error 1
